feat: implement crud for users, by defaultGroupID
