# docs/swagger.json
@@ -8,64 +8,6 @@
     },
     "basePath": "/api/v1/",
     "paths": {
-        "/create-user": {
-            "post": {
-                "description": "Create a Sub-User/Member User Account",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User-Accounts"
-                ],
-                "summary": "Create a Sub-User/Member User Account",
-                "operationId": "create-user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email of the new user",
-                        "name": "email",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Password of the new user",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Optional Role ID string for new user. Defaults to 'member' if not specified",
-                        "name": "roleID",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Optional true or false value to set new user 2FA preference",
-                        "name": "has2FA",
-                        "in": "formData"
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.loginSampleResponseError500"
-                        }
-                    }
-                }
-            }
-        },
         "/images/profile-pic/{imageName}": {
             "get": {
                 "description": "Get User Profile Picture",
@@ -244,13 +186,6 @@
                         "in": "formData"
                     },
                     {
-                        "type": "string",
-                        "description": "User's default group ID",
-                        "name": "defaultGroupID",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
                         "type": "file",
                         "description": "User's profile picture",
                         "name": "profilePicture",
@@ -312,12 +247,6 @@
                         "in": "formData"
                     },
                     {
-                        "type": "string",
-                        "description": "User's default group ID",
-                        "name": "defaultGroupID",
-                        "in": "formData"
-                    },
-                    {
                         "type": "file",
                         "description": "User's profile picture",
                         "name": "profilePicture",
@@ -358,6 +287,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "User's default group ID",
+                        "name": "defaultGroupID",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Optional true or false value to set new user 2FA preference",
                         "name": "has2FA",
                         "in": "formData"
@@ -379,9 +315,14 @@
                 }
             }
         },
-        "/users/by/default-group": {
+        "/users": {
             "get": {
-                "description": "Get Users by Group ID",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get All Users in Group - Requires the canListUsers permission",
                 "consumes": [
                     "application/json"
                 ],
@@ -389,16 +330,112 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Retrieve-Users"
+                    "User-Accounts"
                 ],
-                "summary": "Get Users by Group ID",
-                "operationId": "users-by-groupID",
+                "summary": "Get All Users in Group",
+                "operationId": "all-users-in-group",
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.loginSampleResponseError500"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a Sub-User/Member User Account - Requires the canCreateUsers permission",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User-Accounts"
+                ],
+                "summary": "Create a Sub-User/Member User Account",
+                "operationId": "create-user",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Group ID to filter Users By",
-                        "name": "groupID",
+                        "description": "Email of the new user",
+                        "name": "email",
                         "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password of the new user",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Optional Role ID string for new user. Defaults to 'member' if not specified",
+                        "name": "roleID",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Optional true or false value to set new user 2FA preference",
+                        "name": "has2FA",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.loginSampleResponseError500"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{userID}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get One User in User's Group - Requires the canListUsers permission",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User-Accounts"
+                ],
+                "summary": "Get One User",
+                "operationId": "one-user-group",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -408,6 +445,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "500": {
                         "description": "Internal Server Error",
